1996-11-22  dickey@clark.net

	* src/width/width.1: add "-p" and "-" interpretation

	* src/width/width.c:
	add "-p" option and process "-" as a list of files from standard-input

	* src/width/width.1: RCS_BASE

1996-11-21  dickey@clark.net

	* src/width/width.c: show current width, not maximum

	* src/width/width.c: always show the result

	* src/width/width.c, src/width/Makefile: RCS_BASE

1996-08-14  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: print characters above 128 as octal

1996-07-04  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: used the wrong base for ^x

1996-03-04  Thomas E. Dickey  <dickey@clark.net>

	* src/hex/hex.c: quick hack to show ECMA codes

1995-12-15  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: RCS_BASE

1995-02-20  Thomas E. Dickey  <dickey@clark.net>

	* src/hex/hex.c: RCS_BASE

1995-01-05  Thomas E. Dickey  <dickey@clark.net>

	* src/splitit/splitit.c: added usage-message text

1994-10-17  Thomas E. Dickey  <dickey@clark.net>

	* src/splitit/splitit.c: RCS_BASE

1994-09-02  dickey@clark.net

	* src/realpath/realpath.c:
	IRIX has 'realpath()' function, but I wrote one in case I needed it

1994-07-11  Thomas E. Dickey  <dickey@clark.net>

	* config_h.in: RCS_BASE

1994-06-28  dickey@clark.net

	* src/count_files/count_files.c: RCS_BASE

1994-06-24  dickey@clark.net

	* src/newpath/newpath.sh: RCS_BASE

1994-06-23  dickey@clark.net

	* src/newpath/newpath.c: ULTRIX has no 'strdup()'

1994-06-22  dickey@clark.net

	* src/newpath/newpath.c:
	CLIX compiler warning about possibly uninitialized 'point' variable

1994-06-17  dickey@clark.net

	* src/realpath/realpath.c: RCS_BASE

1994-06-07  dickey@clark.net

	* src/newpath/newpath.c:
	corrected an error in Append that caused it to also remove

1994-06-06  Thomas E. Dickey  <dickey@clark.net>

	* src/cpd/cpd.c:
	took out the apollo-specific __STDCPP_ ifdef, so this can always act as
	a sys5-touch if named appropriately.

1994-06-02  dickey@clark.net
