@@ -1,0 +1,6 @@
+extern int	opterr;
+extern int	optind;
+extern int	optopt;
+extern char	*optarg;
+
+extern int	getopt(int	argc, char * argv[], char * opts);
